all on docker containers

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 URL_DATABASE=postgresql+psycopg2:dsadsa//postgres:postgres@db:5s432/ragdb
+#URL_DATABASE=postgresql://postgres:123@localhost:5432/pdf_diseases
+OLLAMA_HOST=http://ollama:11434
