--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,20 @@ services:
       dockerfile: Dockerfile.ollama
     container_name: ollama_rag
     ports:
-      - "11434:8080"
+      - "11434:11434"
     volumes:
       - ollama_data:/root/.ollama
     restart: always
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
   db:
     image: ankane/pgvector:latest
